2010-03-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_centroids.m:

	- Instead of skipping them, make [NaN NaN NaN] centroid for empty
	slices too. This way, it's easier to use them in other functions
	that iterate all the slices in a volume.

	* Add FiltersToolbox/scinrrd_centroids.m:

	- Compute centroid of every slice with segmented pixels.

2010-03-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/extmat2rotmat.m, PointsToolbox/rotmat2extmat.m:

	- Remove rounding of index values to allow for continuous
	indices. This way, numerical errors are reduced. In case we need
	integer indices, it's very easy to run round(idx) on the output.

	- Rename argument axis as ax, to avoid clash with function axis().

	* Add FiltersToolbox/scinrrd_regionprops.m:

	- SCINRRD_REGIONPROPS Measure properties of image regions on each
	slice.

2010-03-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* PointsToolbox/extmat2rotmat.m, PointsToolbox/rotmat2extmat.m:

	- Add input argument "center", so that we can choose the
	transformation A(X-M) instead of A(X-M)+M. This will center the
	heart around the origin of coordinates, and it also allows to use
	a well-conditioned system to be used in extmat2rotmat.

	* FiltersToolbox/scinrrd_vertical_orientation_pca_basis.m:

	- Remove input argument "type". We are computing an orientation
	basis, not a rotation matrix, so there's no point in having "type"
	to select between A or A'.

	* Rename scinrrd_vertical_rot3.m as
	scinrrd_vertical_orientation_pca_basis.m:

	- We are computing the orientation basis, not a rotation matrix.

	* FiltersToolbox/scinrrd_vertical_rot3.m:

	- Make sure that the orientation of the resulting basis is the
	same as the Cartesian system. 

	The problem is that the basis is valid if we take the negative of
	any of its vectors too. For example, the Cartesian system has
	positive orientation because [1 0 0] x [0 1 0] = [0 0 1]. But