@@ -1,3 +1,9 @@
+2010-03-10  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* Add FiltersToolbox/scinrrd_gradients.m:
+
+	- Compute 1st and 2nd order image gradients.
+
 2010-03-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* FiltersToolbox/scinrrd_centroids.m:
